--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API = https://api.elchocrud.pro/api/v1/a77de43fedc2201e94dc1d85d8808f45/todo_star
+NEXT_PUBLIC_API = https://api.elchocrud.pro/api/v1
